<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >



    <item
        android:title="Regex"
        android:id="@+id/isOnRegex"
        android:checkable="true"

        />

    <group
        android:id="@+id/filter_group">
        <item android:title="@string/Filter">
            <menu>

                <item
                    android:id="@+id/isFavorite"
                    android:title="Favorite"
                    android:checkable="true"
                    />

                <item
                    android:id="@+id/hasDefinition"
                    android:title="hasDefinition"
                    android:checkable="true"
                    />

                <item
                    android:id="@+id/hasExample"
                    android:title="@string/theDefault"
                    android:checkable="true"
                    />

            </menu>


        </item>

    </group>

    <group
        android:id="@+id/sort_group">
        <item android:title="@string/sort">
            <menu>
                <item
                    android:id="@+id/defaultSort"
                    android:title="@string/theDefault"/>
                <item
                    android:id="@+id/createdTimeSort"
                    android:title="@string/created_time"/>
                <item
                    android:id="@+id/randomSort"
                    android:title="@string/random"
                    android:checkable="true"
                    />
            </menu>
        </item>
    </group>



</menu>